--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -1,20 +1,19 @@
 [package]
-name = "node-template"
+name = "pos-node"
 version = "4.0.0-dev"
 description = "A fresh FRAME-based Substrate node, ready for hacking."
-authors = ["Worlddev"]
 homepage = "https://substrate.io/"
 edition = "2021"
 license = "Unlicense"
 publish = false
-repository = "https://github.com/WB-Expert5007/Poa_to_Pos"
+repository = "https://github.com/kaichaosun/substrate-stencil"
 build = "build.rs"
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
 
 [[bin]]
-name = "node-template"
+name = "pos-node"
 
 [dependencies]
 clap = { version = "3.0", features = ["derive"] }
